// Vitest Snapshot v1

exports[`Generator > should emit css 1`] = `
[
  {
    "content": ".Button {
  display: flex;
  position: relative;
  width: fit-content;
  height: fit-content;
  background: #3b82f6;
  border-radius: 4px 4px 4px 4px;
  overflow: hidden;
  gap: 6px;
  padding: 6px 12px 6px 12px;
  align-items: center;
  justify-content: center;
}
.Button__Button {
  display: flex;
  position: relative;
  width: fit-content;
  height: fit-content;
  font-family: Inter, sans-serif;
  font-size: 12px;
  font-weight: 500;
  color: #ffffff;
  text-align: left;
  flex-direction: column;
}
.Button__chevron {
  display: flex;
  position: relative;
  width: 8px;
  height: 8px;
  align-items: flex-start;
}
.Button__arrow_forward_ios {
  display: flex;
  position: absolute;
  left: 2.0833332538604736px;
  top: 0.6666666865348816px;
  width: 3.924999952316284px;
  height: 6.666666507720947px;
}
",
    "filePath": "Button.css",
  },
  {
    "content": "import \\"./Button.css\\";

export function Button(props) {
  return (
    <div {...props} className={\\"Button \\" + props.className}>
      <div className=\\"Button__Button\\">{props.text}</div>
      {props.showChevron && (
        <div className=\\"Button__chevron\\">
          <svg
            width={5}
            height={7}
            viewBox={\\"0 0 5 7\\"}
            fill={\\"none\\"}
            className=\\"Button__arrow_forward_ios\\"
          >
            <path
              d=\\"M0.674995 6.83334L0.0833282 6.24167L2.825 3.5L0.0833282 0.758338L0.674995 0.166672L4.00833 3.5L0.674995 6.83334Z\\"
              fill=\\"white\\"
            />
          </svg>
        </div>
      )}
    </div>
  );
}
",
    "filePath": "Button.js",
  },
  {
    "content": ".Form2 {
  display: flex;
  position: relative;
  width: fit-content;
  height: fit-content;
  background: #ffffff;
  overflow: hidden;
  flex-direction: column;
  gap: 13px;
  padding: 16px 16px 16px 16px;
  align-items: flex-start;
}
.Form2__h1_____ {
  display: flex;
  position: relative;
  width: fit-content;
  height: fit-content;
  font-family: Inter, sans-serif;
  font-size: 12px;
  font-weight: 400;
  color: #000000;
  text-align: left;
  flex-direction: column;
}
.Form2__Button {
  align-self: stretch;
  width: auto;
}
",
    "filePath": "Form2.css",
  },
  {
    "content": "import { Button } from \\"./Button.js\\";
import \\"./Form2.css\\";

export function Form2(props) {
  return (
    <div {...props} className={\\"Form2 \\" + props.className}>
      <div className=\\"Form2__h1_____\\">Some Form (stretch)</div>
      <Button
        showChevron={false}
        text={\\"OK\\"}
        className=\\"Form2__Button\\"
      ></Button>
    </div>
  );
}
",
    "filePath": "Form2.js",
  },
  {
    "content": ".Form {
  display: flex;
  position: relative;
  width: fit-content;
  height: fit-content;
  background: #ffffff;
  overflow: hidden;
  flex-direction: column;
  gap: 13px;
  padding: 16px 16px 16px 16px;
  align-items: flex-start;
}
.Form__h1_____ {
  display: flex;
  position: relative;
  width: fit-content;
  height: fit-content;
  font-family: Inter, sans-serif;
  font-size: 12px;
  font-weight: 400;
  color: #000000;
  text-align: left;
  flex-direction: column;
}
.Form__Button {
}
",
    "filePath": "Form.css",
  },
  {
    "content": "import { Button } from \\"./Button.js\\";
import \\"./Form.css\\";

export function Form(props) {
  return (
    <div {...props} className={\\"Form \\" + props.className}>
      <div className=\\"Form__h1_____\\">Some Form</div>
      <Button showChevron={true} text={\\"OK\\"} className=\\"Form__Button\\"></Button>
    </div>
  );
}
",
    "filePath": "Form.js",
  },
  {
    "content": ".Frame1 {
  display: flex;
  position: relative;
  width: 344px;
  height: 93px;
  background: #ffffff;
  overflow: hidden;
  flex-direction: column;
  align-items: flex-start;
}
.Frame1__Rectangle_1 {
  display: flex;
  position: absolute;
  left: 8px;
  top: 20px;
  width: 128px;
  height: 64px;
}
.Frame1__Rectangle_2 {
  display: flex;
  position: absolute;
  left: 153px;
  top: 8px;
  width: 128px;
  height: 64px;
}
",
    "filePath": "Frame1.css",
  },
  {
    "content": "import \\"./Frame1.css\\";

export function Frame1(props) {
  return (
    <div {...props} className={\\"Frame1 \\" + props.className}>
      <svg
        width={128}
        height={64}
        viewBox={\\"0 0 128 64\\"}
        fill={\\"none\\"}
        className=\\"Frame1__Rectangle_1\\"
      >
        <rect width=\\"128\\" height=\\"64\\" fill=\\"#D9D9D9\\" />
      </svg>
      <svg
        width={128}
        height={64}
        viewBox={\\"0 0 128 64\\"}
        fill={\\"none\\"}
        className=\\"Frame1__Rectangle_2\\"
      >
        <rect width=\\"128\\" height=\\"64\\" fill=\\"#FF0000\\" />
      </svg>
    </div>
  );
}
",
    "filePath": "Frame1.js",
  },
]
`;

exports[`Generator > should emit inline 1`] = `
[
  {
    "content": "export function Button(props) {
  return (
    <div
      {...props}
      style={{
        display: \\"flex\\",
        position: \\"relative\\",
        width: \\"fit-content\\",
        height: \\"fit-content\\",
        background: \\"#3b82f6\\",
        borderRadius: \\"4px 4px 4px 4px\\",
        overflow: \\"hidden\\",
        gap: \\"6px\\",
        padding: \\"6px 12px 6px 12px\\",
        alignItems: \\"center\\",
        justifyContent: \\"center\\",
        ...props.style,
      }}
    >
      <div
        style={{
          display: \\"flex\\",
          position: \\"relative\\",
          width: \\"fit-content\\",
          height: \\"fit-content\\",
          fontFamily: \\"Inter, sans-serif\\",
          fontSize: \\"12px\\",
          fontWeight: 500,
          color: \\"#ffffff\\",
          textAlign: \\"left\\",
          flexDirection: \\"column\\",
        }}
      >
        {props.text}
      </div>
      {props.showChevron && (
        <div
          style={{
            display: \\"flex\\",
            position: \\"relative\\",
            width: \\"8px\\",
            height: \\"8px\\",
            alignItems: \\"flex-start\\",
          }}
        >
          <svg
            width={5}
            height={7}
            viewBox={\\"0 0 5 7\\"}
            fill={\\"none\\"}
            style={{
              display: \\"flex\\",
              position: \\"absolute\\",
              left: \\"2.0833332538604736px\\",
              top: \\"0.6666666865348816px\\",
              width: \\"3.924999952316284px\\",
              height: \\"6.666666507720947px\\",
            }}
          >
            <path
              d=\\"M0.674995 6.83334L0.0833282 6.24167L2.825 3.5L0.0833282 0.758338L0.674995 0.166672L4.00833 3.5L0.674995 6.83334Z\\"
              fill=\\"white\\"
            />
          </svg>
        </div>
      )}
    </div>
  );
}
",
    "filePath": "Button.js",
  },
  {
    "content": "import { Button } from \\"./Button.js\\";

export function Form2(props) {
  return (
    <div
      {...props}
      style={{
        display: \\"flex\\",
        position: \\"relative\\",
        width: \\"fit-content\\",
        height: \\"fit-content\\",
        background: \\"#ffffff\\",
        overflow: \\"hidden\\",
        flexDirection: \\"column\\",
        gap: \\"13px\\",
        padding: \\"16px 16px 16px 16px\\",
        alignItems: \\"flex-start\\",
        ...props.style,
      }}
    >
      <div
        style={{
          display: \\"flex\\",
          position: \\"relative\\",
          width: \\"fit-content\\",
          height: \\"fit-content\\",
          fontFamily: \\"Inter, sans-serif\\",
          fontSize: \\"12px\\",
          fontWeight: 400,
          color: \\"#000000\\",
          textAlign: \\"left\\",
          flexDirection: \\"column\\",
        }}
      >
        Some Form (stretch)
      </div>
      <Button
        showChevron={false}
        text={\\"OK\\"}
        style={{ alignSelf: \\"stretch\\", width: \\"auto\\" }}
      ></Button>
    </div>
  );
}
",
    "filePath": "Form2.js",
  },
  {
    "content": "import { Button } from \\"./Button.js\\";

export function Form(props) {
  return (
    <div
      {...props}
      style={{
        display: \\"flex\\",
        position: \\"relative\\",
        width: \\"fit-content\\",
        height: \\"fit-content\\",
        background: \\"#ffffff\\",
        overflow: \\"hidden\\",
        flexDirection: \\"column\\",
        gap: \\"13px\\",
        padding: \\"16px 16px 16px 16px\\",
        alignItems: \\"flex-start\\",
        ...props.style,
      }}
    >
      <div
        style={{
          display: \\"flex\\",
          position: \\"relative\\",
          width: \\"fit-content\\",
          height: \\"fit-content\\",
          fontFamily: \\"Inter, sans-serif\\",
          fontSize: \\"12px\\",
          fontWeight: 400,
          color: \\"#000000\\",
          textAlign: \\"left\\",
          flexDirection: \\"column\\",
        }}
      >
        Some Form
      </div>
      <Button showChevron={true} text={\\"OK\\"} style={{}}></Button>
    </div>
  );
}
",
    "filePath": "Form.js",
  },
  {
    "content": "export function Frame1(props) {
  return (
    <div
      {...props}
      style={{
        display: \\"flex\\",
        position: \\"relative\\",
        width: \\"344px\\",
        height: \\"93px\\",
        background: \\"#ffffff\\",
        overflow: \\"hidden\\",
        flexDirection: \\"column\\",
        alignItems: \\"flex-start\\",
        ...props.style,
      }}
    >
      <svg
        width={128}
        height={64}
        viewBox={\\"0 0 128 64\\"}
        fill={\\"none\\"}
        style={{
          display: \\"flex\\",
          position: \\"absolute\\",
          left: \\"8px\\",
          top: \\"20px\\",
          width: \\"128px\\",
          height: \\"64px\\",
        }}
      >
        <rect width=\\"128\\" height=\\"64\\" fill=\\"#D9D9D9\\" />
      </svg>
      <svg
        width={128}
        height={64}
        viewBox={\\"0 0 128 64\\"}
        fill={\\"none\\"}
        style={{
          display: \\"flex\\",
          position: \\"absolute\\",
          left: \\"153px\\",
          top: \\"8px\\",
          width: \\"128px\\",
          height: \\"64px\\",
        }}
      >
        <rect width=\\"128\\" height=\\"64\\" fill=\\"#FF0000\\" />
      </svg>
    </div>
  );
}
",
    "filePath": "Frame1.js",
  },
]
`;

exports[`Generator > should emit tailwind 1`] = `
[
  {
    "content": "import { twMerge } from \\"tailwind-merge\\";

export function Button(props) {
  return (
    <div
      {...props}
      className={twMerge(
        \\"flex relative w-fit h-fit bg-blue-500 rounded-tl rounded-tr rounded-br rounded-bl overflow-hidden gap-1.5 pt-1.5 pr-3 pb-1.5 pl-3 items-center justify-center\\",
        props.className
      )}
    >
      <div className=\\"flex relative w-fit h-fit font-['Inter',sans-serif] text-xs font-medium text-white text-left flex-col\\">
        {props.text}
      </div>
      {props.showChevron && (
        <div className=\\"flex relative w-2 h-2 items-start\\">
          <svg
            width={5}
            height={7}
            viewBox={\\"0 0 5 7\\"}
            fill={\\"none\\"}
            className=\\"flex absolute left-[0.1302083283662796rem] top-[0.0416666679084301rem] w-[0.24531249701976776rem] h-[0.4166666567325592rem]\\"
          >
            <path
              d=\\"M0.674995 6.83334L0.0833282 6.24167L2.825 3.5L0.0833282 0.758338L0.674995 0.166672L4.00833 3.5L0.674995 6.83334Z\\"
              fill=\\"white\\"
            />
          </svg>
        </div>
      )}
    </div>
  );
}
",
    "filePath": "Button.js",
  },
  {
    "content": "import { Button } from \\"./Button.js\\";
import { twMerge } from \\"tailwind-merge\\";

export function Form2(props) {
  return (
    <div
      {...props}
      className={twMerge(
        \\"flex relative w-fit h-fit bg-white overflow-hidden flex-col gap-[0.8125rem] pt-4 pr-4 pb-4 pl-4 items-start\\",
        props.className
      )}
    >
      <div className=\\"flex relative w-fit h-fit font-['Inter',sans-serif] text-xs text-black text-left flex-col\\">
        Some Form (stretch)
      </div>
      <Button
        showChevron={false}
        text={\\"OK\\"}
        className=\\"self-stretch w-auto\\"
      ></Button>
    </div>
  );
}
",
    "filePath": "Form2.js",
  },
  {
    "content": "import { Button } from \\"./Button.js\\";
import { twMerge } from \\"tailwind-merge\\";

export function Form(props) {
  return (
    <div
      {...props}
      className={twMerge(
        \\"flex relative w-fit h-fit bg-white overflow-hidden flex-col gap-[0.8125rem] pt-4 pr-4 pb-4 pl-4 items-start\\",
        props.className
      )}
    >
      <div className=\\"flex relative w-fit h-fit font-['Inter',sans-serif] text-xs text-black text-left flex-col\\">
        Some Form
      </div>
      <Button showChevron={true} text={\\"OK\\"} className=\\"\\"></Button>
    </div>
  );
}
",
    "filePath": "Form.js",
  },
  {
    "content": "import { twMerge } from \\"tailwind-merge\\";

export function Frame1(props) {
  return (
    <div
      {...props}
      className={twMerge(
        \\"flex relative w-[21.5rem] h-[5.8125rem] bg-white overflow-hidden flex-col items-start\\",
        props.className
      )}
    >
      <svg
        width={128}
        height={64}
        viewBox={\\"0 0 128 64\\"}
        fill={\\"none\\"}
        className=\\"flex absolute left-2 top-5 w-32 h-16\\"
      >
        <rect width=\\"128\\" height=\\"64\\" fill=\\"#D9D9D9\\" />
      </svg>
      <svg
        width={128}
        height={64}
        viewBox={\\"0 0 128 64\\"}
        fill={\\"none\\"}
        className=\\"flex absolute left-[9.5625rem] top-2 w-32 h-16\\"
      >
        <rect width=\\"128\\" height=\\"64\\" fill=\\"#FF0000\\" />
      </svg>
    </div>
  );
}
",
    "filePath": "Frame1.js",
  },
]
`;
